src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwF1000-dhF500-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    open-floating true\n    default-column-width { fixed 1000; }\n    default-window-height { fixed 500; }\n}"
expression: snapshot
---
initial configure:
size: 1000 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
